# fhir-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scripts.py
.github/workflows/: build.yaml
automation/helm/: values_dev.yaml  values_prod.yaml
automation/helm/change_me/: Chart.yaml
automation/terraform/: .terraform.lock.hcl  locals.tf  service_accounts.tf  settings_dev.tfvars  settings_prod.tfvars  variables.tf
fhir/: main.py
fhir/adapters/: README.md
fhir/adapters/events/: handlers.py  interface.py
fhir/adapters/fast_api/: interface.py  routes.py  security.py
fhir/adapters/sql/: db_session.py  handler.py  interface.py
fhir/core/: README.md  events.py
fhir/environments/: base.py
fhir/utils/: logger.py
