[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fhir"
version = "0.0.1"
authors = ["Vitor Pinto"]
description = "Queue connector to be reused by other services"
readme = "README.md"
repository = "https://github.com/nanoclinic/fhir.git"
packages = [{include = "fhir"}]


[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
nanologger = {git = "https://github.com/nanoclinic/logger.git"}
nanosettings = {git = "https://github.com/nanoclinic/nanosettings.git"}
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
fhir-resources = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<8"
pytest-cov = "^4.1.0"
pretty-errors = "^1.2.25"
poetry-bumpversion = "^0.3.1"
pyright = "^1.1.351"

[tool.pyright]
strict = ["true"]
reportMissingImports = true

# Optional: additional configuration
exclude = ["venv/**"]
# extraPaths = ["src"]
# pythonVersion = "3.10"


[tool.poetry.scripts]
start = "scripts:start"
start_local = "scripts:start_local"
pytest = "scripts:pytest"
pyright = "scripts:pyright"
coverage = "scripts:coverage"
coverage_ci = "scripts:coverage_ci"